# cruelhessian

./: CMakeLists.txt  README.txt  cruelhessian.desktop  deps.sh
 cruelhessian/: AUTHORS.txt  CMakeLists.txt  INSTALL.txt  NEWS.txt  README.txt  install  readme
 cruelhessian/Codeblocks-proj/: ch.cbp  ch.depend  ch.layout
 cruelhessian/data/: TaharezLook.scheme  chessian.layout
 cruelhessian/data/fonts/: Font.xsd
 cruelhessian/data/layouts/: chessian.layout  fs.layout  wup.layout
 cruelhessian/po/: en.po  pl.po  script.sh
 cruelhessian/projects/: ch-unix.cbp
 cruelhessian/projects/VC10/: Cruel Hessian.vcxproj  CruelHessian.sln
 cruelhessian/projects/VC8/: Cruel Hessian.sln  Cruel Hessian.vcproj
 cruelhessian/projects/VC9/: Cruel Hessian.sln  Cruel Hessian.vcproj
 cruelhessian/src/: Arrow.cpp  Arrow.h  AudioManager.cpp  AudioManager.h  Background.cpp  Background.h  Body.cpp  Bonus.cpp  Bonus.h  BonusManager.cpp  BonusManager.h  Bot.cpp  Bot.h  BotManager.cpp  BotManager.h  Bullet.cpp  Bullet.h  CMakeLists.txt  Chat.cpp  Chat.h  Cluster.cpp  Cluster.h  ClusterGrenade.cpp  ClusterGrenade.h  Collisions.cpp  CompatibleWindows.h  Console.cpp  Console.h  Controls.cpp  Enums.h  Events.cpp  FontManager.cpp  FontManager.h  Fonts.cpp  Fonts.h  GUI.cpp  GUI.h  Game.cpp  Game.h  Globals.h  (+133 more)
 cruelhessian/src/GUI/: DiskObject.cpp  DiskObject.h  GUI.cpp  GUI.h  GUIGraphics.cpp  GUIInterface.cpp  GUIMaps.cpp  GUIMusic.cpp  GUIOptions.cpp  GUIPlayer.cpp  GUIWindowFolderSelector.cpp  GUIWindowFolderSelector.h  GUIWindowNoSoldat.cpp  GUIWindowNoSoldat.h  GUIWindowUpdater.cpp  GUIWindowUpdater.h
 cruelhessian/src/decompress/: UnLZMA.cpp  UnLZMA.h  UnTar.cpp  UnTar.h
 cruelhessian/src/decompress/lzmadec/: 7zFile.c  LzFind.h  LzmaDec.cpp
 cruelhessian/src/interface/: InterfaceElement.h  JetBar.cpp  JetBar.h
 cruelhessian/src/locale/pl/LC_MESSAGES/: pl.mo
 cruelhessian/src/parser/: SimpleIni.h
 cruelhessian/src/physics/: Material.h  Polygon.h
 cruelhessian/src/soil/: SOIL.c  stb_image_aug.c  stb_image_aug.h
 cruelhessian/src/textinout/: ChatLine.cpp  ChatLine.h  CommandLine.cpp  CommandLine.h  Line.cpp  TextOutput.cpp
cmake/: FindCEGUI.cmake
data/layouts/: wns.layout  wup.layout
data/schemes/: TaharezLook.scheme
projects/codeblocks/: ch-unix.cbp
src/: Arrow.cpp  Arrow.h  AudioManager.cpp  AudioManager.h  Background.h  Body.h  Bonus.cpp  BonusManager.cpp  BotManager.cpp  BotManager.h  Bullet.cpp  Cluster.cpp  ClusterGrenade.h  CompatibleWindows.h  Console.h  ContactListener.cpp  Drawable.h  Enums.h  FontManager.cpp  Grenade.h  InterfaceBaseManager.cpp  InterfaceBaseManager.h  InterfaceManager.cpp  Jet.h  Main.cpp  Map.cpp  MapElement.h  MapElementProp.cpp  ParserManager.cpp  PhysicsManager.cpp  PhysicsManager.h  Regex.h  RenderManager.cpp  ResourceManager.h  Shell.h  Singleton.h  SoundBufferManager.h  TMatrix2D.cpp  TMatrix2D.h  TexturesLoader.h  (+6 more)
src/GUI/: DiskObject.cpp  DiskObject.h  GUI.cpp  GUI.h  GUIGraphics.cpp  GUIMusic.cpp  GUIOptions.cpp  GUIPlayer.cpp  GUIWindowFolderSelector.h  GUIWindowNoSoldat.cpp  GUIWindowNoSoldat.h
src/decompress/: UnLZMA.h  UnTar.cpp
src/decompress/lzmadec/: 7zFile.cpp  7zFile.h  Alloc.c  Alloc.h  LzFind.c  LzmaDec.c  LzmaDec.h  Types.h
src/interface/: InterfaceElement.cpp
src/physics/: Contact.cpp  Contact.h  ContactListener.cpp  ContactListener.h  Polygon.cpp
src/soil/: SOIL.c  stbi_DDS_aug_c.h
src/textinout/: CommandLine.cpp  Line.h  TextOutput.h
